--- a/Grupo5APC-TrabalhoPlotly-Teste_Dash/assets/css.css
+++ b/Grupo5APC-TrabalhoPlotly-Teste_Dash/assets/css.css
@@ -12,7 +12,7 @@ body{
     margin-top: 1%;
     color: rgb(30,33,48);
     font-family: 'Bebas Neue', cursive;
-    font-size: 80px;
+    font-size: 65px;
     letter-spacing: 7px;
     text-shadow: rgba(255,255,255,0.5) -1px 0, rgba(255,255,255,0.5) 0 -1px,
    rgba(255,255,255,0.5) 1px 0, rgba(255,255,255,0.5) 0 1px,
@@ -22,7 +22,7 @@ body{
 }
 
 .graficos{
-    margin: -2% 0 0 0.1%;
+    margin: -3% 0 0 0.1%;
 }
 
 .OC, .AG, .LL, .AC, .CQ{
@@ -31,15 +31,15 @@ body{
 /*estilizando div grafico Oávio e Caio*/
 .OC{
     position: absolute;
-    width: 920px;
+    width: 630px;
     height: 500px;
     transition: all 0.5s ease-in;
-    z-index:10;
+    z-index:20;
 }
 
 .OC H1{
     margin-top: 3%;
-    font-size: 23px;
+    font-size: 16px;
     text-align: center;
     color: #FFFFFF;
     z-index: 30;
@@ -49,9 +49,10 @@ body{
 .OC:hover{
     transform: scale(1.5);
     margin: 5% 0 0 14%;
-    height: 490px;
+    height: 460px;
     position: absolute;
-    z-index:20;
+    width: auto;
+    z-index:150;
 }
 
 #grafico_OC{
@@ -62,23 +63,23 @@ body{
 #dropdown_OC{
     background-color: #1e2130;
     position: absolute;
-    width: 360px;
+    width: 50%;
     height:3px;
     text-align: center;
-    font-size:17px;
+    font-size:13px;
     text-indent: 0.01px;
-    margin: -420px 0 0 280px;
+    margin: -400px 0 0 167px;
 }
 
 #dropdown_ano_OC{
     background-color: #1e2130;
     position: absolute;
-    width: 360px;
+    width: 50%;
     height:3px;
     text-align: center;
-    font-size:17px;
+    font-size:13px;
     text-indent: 0.01px;
-    margin: -375px 0 0 280px;
+    margin: -345px 0 0 167px;
 }
 
 #checklist_OC{
@@ -89,16 +90,16 @@ body{
 /*estilizando div grafico Ana e Guilherme*/
 .AG{
     position: absolute;
-    width: 915px;
+    width: 690px;
     height: 460px;
-    margin: 0 0 0 925px;
+    margin: 0 0 0 635px;
     transition: all 0.5s ease-in;
     z-index:10;
 }
 
 .AG H1{
     margin-top: 3%;
-    font-size: 23px;
+    font-size: 16px;
     text-align: center;
     color: #FFFFFF;
     z-index: 30;
@@ -107,14 +108,14 @@ body{
 
 .AG:hover{
     transform: scale(1.3);
-    margin: 1.5% 0 0 40%;
+    margin: 1.5% 0 0 37%;
     position: absolute;
-    z-index:20;
+    z-index:150;
 }
 
 #grafico_AG{
-    margin-top: -50px;
-    margin-left: -50px;
+    margin-top: -40px;
+    margin-left: -120px;
     width: 750px;
     height:500px;
 }
@@ -122,19 +123,19 @@ body{
 #dropdown_AG{
     background-color: #1e2130;
     position: absolute;
-    width: 250px;
+    width: 220px;
     height:3px;
     text-align: center;
-    font-size:17px;
+    font-size:13px;
     text-indent: 0.01px;
-    margin: -420px 0 0 585px;
+    margin: -420px 0 0 420px;
 }
 
 /*estilizando div grafico Larissa e Letícia*/
 .LL{
     position: absolute;
-    width: 920px;
-    height: 781px;
+    width: 630px;
+    height: 741px;
     margin: 505px 0 0 0;
     transition: all 0.5s ease-in;
     z-index:10;
@@ -142,7 +143,7 @@ body{
 
 .LL H1{
     margin-top: 3%;
-    font-size: 23px;
+    font-size: 16px;
     text-align: center;
     color: #FFFFFF;
     z-index: 30;
@@ -157,43 +158,45 @@ body{
     height: 645px;
     z-index:20;
 }
+
 .LL:hover #grafico_LL{
     margin-top: -20px;
 }
+
 .LL:hover #dropdown_LL{
     margin-top: -665px;
 }
 */
 
 #grafico_LL{
-    margin-top: 40px;
+    margin-top: 10px;
 }
 
 #dropdown_LL{
     background-color: #1e2130;
     position: absolute;
-    width: 240px;
+    width: 200px;
     height:3px;
     text-align: center;
-    font-size:17px;
+    font-size:13px;
     text-indent: 0.01px;
-    margin: -710px 0 0 336px;
+    margin: -680px 0 0 217px;
 }
 
 /*estilizando div grafico Augusto e Catlen*/
 .AC{
     position: absolute;
-    width: 915px;
-    height: 407px;
+    width: 690px;
+    height: 387px;
     transition: all 0.5s ease-in;
-    margin: 466px 0 0 925px;
+    margin: 466px 0 0 635px;
     z-index:10;
     color: #FFFFFF;
 }
 
 .AC H1{
     margin-top: 3%;
-    font-size: 23px;
+    font-size: 16px;
     text-align: center;
     color: #FFFFFF;
     z-index: 30;
@@ -202,10 +205,10 @@ body{
 
 .AC:hover{
     transform: scale(1.5);
-    margin: 28% 0 0 35%;
+    margin: 37% 0 0 32%;
     position: absolute;
-    height: 390px;
-    z-index:20;
+    height: 357px;
+    z-index:150;
 }
 
 #grafico_AC{
@@ -215,23 +218,23 @@ body{
 
 #radioItems_AC{
     position: absolute;
-    margin: -315px 0 0 725px;
+    margin: -315px 0 0 320px;
 }
 
 /*estilizando div grafico Carol e Quirino*/
 .CQ{
     position: absolute;
-    width: 915px;
-    height: 407px;
+    width: 690px;
+    height: 387px;
     transition: all 0.5s ease-in;
-    margin: 879px 0 0 925px;
+    margin: 859px 0 0 635px;
     z-index:10;
     color: #FFFFFF;
 }
 
 .CQ H1{
     margin-top: 3%;
-    font-size: 23px;
+    font-size: 16px;
     text-align: center;
     color: #FFFFFF;
     z-index: 30;
@@ -240,18 +243,18 @@ body{
 
 .CQ:hover{
     transform: scale(1.5);
-    height: 390px;
-    margin: 40% 0 0 35%;
+    height: 370px;
+    margin: 57% 0 0 32%;
     position: absolute;
-    z-index:20;
+    z-index:150;
 }
 
 #grafico_CQ{
     margin-top: -10px;
-    height:340px;
+    height:350px;
 }
 
 #checklist_CQ{
     position: relative;
-    margin: -315px 0 0 365px;
+    margin: -315px 0 0 260px;
 }
