--- a/Grupo5APC-TrabalhoPlotly-Teste_Dash/assets/css.css
+++ b/Grupo5APC-TrabalhoPlotly-Teste_Dash/assets/css.css
@@ -45,7 +45,7 @@ body{
     z-index: 30;
     text-transform: uppercase;
 }
-
+/*
 .OC:hover{
     transform: scale(1.5);
     margin: 5% 0 0 14%;
@@ -54,7 +54,7 @@ body{
     width: auto;
     z-index:150;
 }
-
+*/
 #grafico_OC{
     margin-top: 100px;
     height:350px;
@@ -90,7 +90,7 @@ body{
 /*estilizando div grafico Ana e Guilherme*/
 .AG{
     position: absolute;
-    width: 690px;
+    width: 655px;
     height: 460px;
     margin: 0 0 0 635px;
     transition: all 0.5s ease-in;
@@ -105,14 +105,14 @@ body{
     z-index: 30;
     text-transform: uppercase;
 }
-
+/*
 .AG:hover{
     transform: scale(1.3);
     margin: 1.5% 0 0 37%;
     position: absolute;
     z-index:150;
 }
-
+*/
 #grafico_AG{
     margin-top: -40px;
     margin-left: -120px;
@@ -186,7 +186,7 @@ body{
 /*estilizando div grafico Augusto e Catlen*/
 .AC{
     position: absolute;
-    width: 690px;
+    width: 655px;
     height: 387px;
     transition: all 0.5s ease-in;
     margin: 466px 0 0 635px;
@@ -202,7 +202,7 @@ body{
     z-index: 30;
     text-transform: uppercase;
 }
-
+/*
 .AC:hover{
     transform: scale(1.5);
     margin: 37% 0 0 32%;
@@ -210,7 +210,7 @@ body{
     height: 357px;
     z-index:150;
 }
-
+*/
 #grafico_AC{
     margin-top: -10px;
     height:350px;
@@ -224,7 +224,7 @@ body{
 /*estilizando div grafico Carol e Quirino*/
 .CQ{
     position: absolute;
-    width: 690px;
+    width: 655px;
     height: 387px;
     transition: all 0.5s ease-in;
     margin: 859px 0 0 635px;
@@ -240,7 +240,7 @@ body{
     z-index: 30;
     text-transform: uppercase;
 }
-
+/*
 .CQ:hover{
     transform: scale(1.5);
     height: 370px;
@@ -248,7 +248,7 @@ body{
     position: absolute;
     z-index:150;
 }
-
+*/
 #grafico_CQ{
     margin-top: -10px;
     height:350px;
